--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "author": "Alexey",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.3.6",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^5.0.8",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
